compiler/typ/tests/fixtures/diagnostics/0799_polyvar_duplicate_tag_conflict_04.ml
let bad_delta : [ `A of int | `A of bool ] -> int =
  fun _ -> 3
